--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "passport.socketio": "^3.7.0",
     "socket.io": "^3.0.4",
+    "socketio-auth": "^0.1.1",
     "ws": "^7.4.1"
   }
 }
